Add missing import

--- a/Development.ipynb
+++ b/Development.ipynb
@@ -4,7 +4,28 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Python3 compatibility\n",
     "from __future__ import print_function, division, absolute_import\n",
@@ -15,33 +36,19 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Load DmpSoftware and ROOT\n",
-    "from ROOT import gSystem\n",
-    "gSystem.Load('libDmpEvent.so')\n",
-    "from ROOT import DmpChain\n",
-    "from ROOT import TChain"
+    "import ROOT\n",
+    "ROOT.gSystem.Load('libDmpEvent.so')\n",
+    "ROOT.gSystem.Load('libDmpService.so')\n",
+    "import Tools"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IOError",
-     "evalue": "'/home/users/c/coppinp/Tools/matplotlib_style' not found in the style library and input is not a valid URL or path; see `style.available` for list of available styles",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIOError\u001b[0m                                   Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-ee2da3d531fa>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstyle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0muse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhome\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m\"Tools/matplotlib_style\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/home/users/c/coppinp/.local/lib/python2.7/site-packages/matplotlib/style/core.pyc\u001b[0m in \u001b[0;36muse\u001b[0;34m(style)\u001b[0m\n\u001b[1;32m    115\u001b[0m                     \u001b[0;34m\"{!r} not found in the style library and input is not a \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    116\u001b[0m                     \u001b[0;34m\"valid URL or path; see `style.available` for list of \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 117\u001b[0;31m                     \"available styles\".format(style))\n\u001b[0m\u001b[1;32m    118\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    119\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIOError\u001b[0m: '/home/users/c/coppinp/Tools/matplotlib_style' not found in the style library and input is not a valid URL or path; see `style.available` for list of available styles"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "plt.style.use(home+\"Tools/matplotlib_style\")"
+    "plt.style.use(Tools.mpl_style_file)"
    ]
   },
   {
@@ -87,11 +94,11 @@
     "if( Use_data ):\n",
     "    infile = \"/dpnc/beegfs/dampe/prod/FM/skim/6.0.0/v2/2018/03/01_data_100_500.root\"\n",
     "    infile = home + \"data_file_3.root\"\n",
-    "    dc = DmpChain(\"CollectionTree\")\n",
+    "    dc = ROOT.DmpChain(\"CollectionTree\")\n",
     "    ttt = dc.Add(infile)\n",
     "else:\n",
     "    infile = \"/dpnc/beegfs/dampe/prod/MC/reco/v6r0p12/allHe4-v6r0p12_10TeV_100TeV-FTFP_BGO_Quenching/allHe4-v6r0p12_10TeV_100TeV-FTFP_BGO_Quenching.noOrb.500005.reco.root\"\n",
-    "    dc = DmpChain(\"CollectionTree\")\n",
+    "    dc = ROOT.DmpChain(\"CollectionTree\")\n",
     "    ttt = dc.Add(infile)\n",
     "\n",
     "nevents = dc.GetEntries()\n",
@@ -155,7 +162,8 @@
     "        continue\n",
     "\n",
     "    # If we were not stopped by now, set the skim variable to true\n",
-    "    skim[i] = True"
+    "    skim[i] = True\n",
+    "    break"
    ]
   },
   {
@@ -164,16 +172,36 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ROOT.DmpBgoBase.GetBarID(int(BGO_HitBarId[j]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Consistency check, are they events in skim selecting that do not pass the filter?\n",
+      "Consistency check, are there events in skim selecting that do not pass the filter?\n",
       "\t True\n"
      ]
     }
    ],
    "source": [
-    "print( \"Consistency check, are they events in skim selecting that do not pass the filter?\")\n",
+    "print( \"Consistency check, are there events in skim selecting that do not pass the filter?\")\n",
     "print(\"\\t\", any( ~skim ))"
    ]
   },
@@ -185,7 +213,7 @@
     {
      "data": {
       "text/plain": [
-       "(13, 1000)"
+       "(1, 1000)"
       ]
      },
      "execution_count": 7,
