--- a/Test_skimmer_import.ipynb
+++ b/Test_skimmer_import.ipynb
@@ -10,16 +10,18 @@
     "from __future__ import print_function, division, absolute_import\n",
     "from glob import glob\n",
     "import numpy as np\n",
-    "import os\n",
+    "import os, imp\n",
     "home = os.path.expanduser(\"~\")+\"/\"\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Load DmpSoftware and ROOT\n",
     "from ROOT import gSystem\n",
-    "gSystem.Load('libDmpEvent.so')\n",
+    "ttt = gSystem.Load('libDmpEvent.so')\n",
     "from ROOT import DmpChain\n",
-    "#from ROOT import TChain"
+    "import ROOT\n",
+    "\n",
+    "import Skimmer"
    ]
   },
   {
@@ -33,19 +35,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2923\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "Use_data = True\n",
+    "Use_data = False\n",
     "if( Use_data ):\n",
     "    infile = \"/dpnc/beegfs/dampe/prod/FM/skim/6.0.0/v2/2018/03/01_data_025_050.root\"\n",
     "    #infile = home + \"data_file_3.root\"\n",
@@ -53,6 +54,8 @@
     "    ttt = dc.Add(infile)\n",
     "else:\n",
     "    infile = \"/dpnc/beegfs/dampe/prod/MC/reco/v6r0p12/allHe4-v6r0p12_10TeV_100TeV-FTFP_BGO_Quenching/allHe4-v6r0p12_10TeV_100TeV-FTFP_BGO_Quenching.noOrb.500005.reco.root\"\n",
+    "    infile = \"/srv/beegfs/scratch/groups/dpnc/dampe/prod/MC/reco/v6r0p10/allProton-v6r0p10_100GeV_1TeV_FTFP-p1/allProton-v6r0p10_100GeV_1TeV_FTFP-p1.noOrb.111768.reco.root\"\n",
+    "    #infile = \"/srv/beegfs/scratch/groups/dpnc/dampe/prod/MC/reco/v6r0p12/allProton-v6r0p12_100TeV_1PeV_EPOSLHC_FTFP_BERT-p1/allProton-v6r0p12_100TeV_1PeV_EPOSLHC_FTFP_BERT-p1.noOrb.100715.reco.root\"\n",
     "    dc = DmpChain(\"CollectionTree\")\n",
     "    ttt = dc.Add(infile)\n",
     "\n",
@@ -62,11 +65,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import Skimmer"
+    "# proton, helium = [], []\n",
+    "# with open(\"filelist.txt\", \"r\") as f:\n",
+    "#     for line in f:\n",
+    "#         if( \"allHe4\" in line ):\n",
+    "#             line = line.replace(\"\\n\", \"\")\n",
+    "#             f = line.split(\"/\")[-1]\n",
+    "#             cmd = \"scp coppinp@login2.baobab.hpc.unige.ch:{} {}\".format(line,f)\n",
+    "#             os.system(cmd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "TStreamerInfo::BuildCheck:0: RuntimeWarning: \n",
+      "   The StreamerInfo of class DmpRunSimuHeader read from file TESTFILES/allProton-v6r0p12_100TeV_1PeV_EPOSLHC_FTFP_BERT-p1.noOrb.100715.reco.root\n",
+      "   has the same version (=1) as the active class but a different checksum.\n",
+      "   You should update the version to ClassDef(DmpRunSimuHeader,2).\n",
+      "   Do not try to write objects with the current class definition,\n",
+      "   the files will not be readable.\n",
+      "\n",
+      "TStreamerInfo::CompareContent:0: RuntimeWarning: The following data member of\n",
+      "the in-memory layout version 1 of class 'DmpRunSimuHeader' is missing from \n",
+      "the on-file layout version 1:\n",
+      "   string fHadrPhysList; //\n",
+      "TStreamerInfo::CompareContent:0: RuntimeWarning: The following data member of\n",
+      "the in-memory layout version 1 of class 'DmpRunSimuHeader' is missing from \n",
+      "the on-file layout version 1:\n",
+      "   double fCrmcEnergyThresholdGev; //\n",
+      "TStreamerInfo::CompareContent:0: RuntimeWarning: The following data member of\n",
+      "the in-memory layout version 1 of class 'DmpRunSimuHeader' is missing from \n",
+      "the on-file layout version 1:\n",
+      "   double fCrmcEnergyThreshold2Gev; //\n"
+     ]
+    }
+   ],
+   "source": [
+    "proton, helium = [], []\n",
+    "with open(\"filelist.txt\", \"r\") as f:\n",
+    "    for line in f:\n",
+    "        if( \"Proton\" in line ):\n",
+    "            proton.append( line.replace(\"\\n\",\"\").split(\"/\")[-1] )\n",
+    "        elif( \"allHe4\" in line ):\n",
+    "            helium.append( line.replace(\"\\n\",\"\").split(\"/\")[-1] )\n",
+    "\n",
+    "dc = DmpChain(\"CollectionTree\")\n",
+    "for infile in proton:\n",
+    "    ttt = dc.Add(\"TESTFILES/\"+infile)\n",
+    "\n",
+    "nevents = dc.GetEntries()\n",
+    "print(nevents)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'Skimmer' from 'Skimmer.pyc'>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "imp.reload(Skimmer)"
    ]
   },
   {
@@ -87,35 +179,374 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2923\n"
+      "9\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "print(np.sum(skim))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True])"
+       "1"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20000\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "TStreamerInfo::BuildCheck:0: RuntimeWarning: \n",
+      "   The StreamerInfo of class DmpRunSimuHeader read from file /srv/beegfs/scratch/groups/dpnc/dampe/prod/MC/reco/v6r0p10/allProton-v6r0p10_100GeV_1TeV_FTFP-p1/allProton-v6r0p10_100GeV_1TeV_FTFP-p1.noOrb.111768.reco.root\n",
+      "   has the same version (=1) as the active class but a different checksum.\n",
+      "   You should update the version to ClassDef(DmpRunSimuHeader,2).\n",
+      "   Do not try to write objects with the current class definition,\n",
+      "   the files will not be readable.\n",
+      "\n",
+      "TStreamerInfo::CompareContent:0: RuntimeWarning: The following data member of\n",
+      "the in-memory layout version 1 of class 'DmpRunSimuHeader' is missing from \n",
+      "the on-file layout version 1:\n",
+      "   string fHadrPhysList; //\n",
+      "TStreamerInfo::CompareContent:0: RuntimeWarning: The following data member of\n",
+      "the in-memory layout version 1 of class 'DmpRunSimuHeader' is missing from \n",
+      "the on-file layout version 1:\n",
+      "   double fCrmcEnergyThresholdGev; //\n",
+      "TStreamerInfo::CompareContent:0: RuntimeWarning: The following data member of\n",
+      "the in-memory layout version 1 of class 'DmpRunSimuHeader' is missing from \n",
+      "the on-file layout version 1:\n",
+      "   double fCrmcEnergyThreshold2Gev; //\n"
+     ]
+    }
+   ],
+   "source": [
+    "infile = \"/srv/beegfs/scratch/groups/dpnc/dampe/prod/MC/reco/v6r0p10/allProton-v6r0p10_100GeV_1TeV_FTFP-p1/allProton-v6r0p10_100GeV_1TeV_FTFP-p1.noOrb.111768.reco.root\"\n",
+    "dc = DmpChain(\"CollectionTree\")\n",
+    "dc.Add(infile)\n",
+    "\n",
+    "nevents = dc.GetEntries()\n",
+    "print(nevents)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "898\n"
+     ]
+    }
+   ],
+   "source": [
+    "def SkimmerEv(dc):\n",
+    "    nevents = dc.GetEntries()\n",
+    "    skim = np.zeros(nevents, dtype=np.bool)\n",
+    "    for i in range(nevents):\n",
+    "        ev = dc.GetDmpEvent(i)\n",
+    "\n",
+    "        # 1: BGO reconstructed energy greater than 20 GeV\n",
+    "        BGOrec = ev.pEvtBgoRec()\n",
+    "        BGO_TotalE = BGOrec.GetTotalEnergy() # [MeV]\n",
+    "        if( BGO_TotalE<1e-6 ):\n",
+    "            continue\n",
+    "\n",
+    "        # 2: rMaxELayer cut\n",
+    "        BGO_MaxELayer = max( [BGOrec.GetELayer(j) for j in range(14)] )\n",
+    "        ratio = BGO_MaxELayer/BGO_TotalE\n",
+    "        if( ratio>0.35 ):\n",
+    "            continue\n",
+    "        \n",
+    "        skim[i] = True\n",
+    "    return skim\n",
+    "        \n",
+    "skim = SkimmerEv(dc)\n",
+    "print(np.sum(skim))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "898\n"
+     ]
+    }
+   ],
+   "source": [
+    "def SkimmerEvMisha(dc):\n",
+    "    Ezero = 0\n",
+    "    nevents = dc.GetEntries()\n",
+    "    skim = np.zeros(nevents, dtype=np.bool)\n",
+    "    for i in range(nevents):\n",
+    "        ev = dc.GetDmpEvent(i)\n",
+    "\n",
+    "        # 1: BGO reconstructed energy greater than 20 GeV\n",
+    "        BGOrec = ev.pEvtBgoRec()\n",
+    "        BGO_TotalE = BGOrec.GetTotalEnergy() # [MeV]\n",
+    "        \n",
+    "        if( BGO_TotalE<1e-6 and BGO_TotalE>-1e-6 ):\n",
+    "            Ezero += 1\n",
+    "        \n",
+    "        if( BGO_TotalE<1e-6 ):\n",
+    "            continue\n",
+    "        \n",
+    "        bgorec = BGOrec\n",
+    "        elayer_max = 0.\n",
+    "        for j in range(14):\n",
+    "            if bgorec.GetELayer(j) > elayer_max:\n",
+    "                elayer_max = bgorec.GetELayer(j)\n",
+    "        rMaxELayerTotalE = elayer_max / bgorec.GetTotalEnergy()\n",
+    "        if rMaxELayerTotalE > 0.35:\n",
+    "            continue\n",
+    "        \n",
+    "        skim[i] = True\n",
+    "    return skim, Ezero\n",
+    "\n",
+    "skim, Ezero = SkimmerEvMisha(dc)\n",
+    "print(np.sum(skim))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "720\n"
+     ]
+    }
+   ],
+   "source": [
+    "counter = 0\n",
+    "for i in range(nevents):\n",
+    "    ev = dc.GetDmpEvent(i)\n",
+    "\n",
+    "    # 1: BGO reconstructed energy greater than 20 GeV\n",
+    "    BGOrec = ev.pEvtBgoRec()\n",
+    "    Header = ev.pEvtHeader()\n",
+    "    BGO_TotalE = BGOrec.GetTotalEnergy() # [MeV]\n",
+    "    Trigger_stat = Header.GetTriggerStatus()\n",
+    "\n",
+    "    if( BGO_TotalE>0. ):\n",
+    "        bgorec = BGOrec\n",
+    "        elayer_max = 0.\n",
+    "        for j in range(14):\n",
+    "            if bgorec.GetELayer(j) > elayer_max:\n",
+    "                elayer_max = bgorec.GetELayer(j)\n",
+    "        rMaxELayerTotalE = elayer_max / bgorec.GetTotalEnergy()\n",
+    "        if rMaxELayerTotalE < 0.35:\n",
+    "            \n",
+    "            #Triggers = [int(format(Trigger_stat,\"b\")[::-1][idx])*int(format(Trigger_stat,\"b\")[::-1][8+idx]) for idx in range(5)]\n",
+    "            #if( any(Triggers) ):\n",
+    "            #    counter +=1\n",
+    "            if( Header.GeneratedTrigger(0) ):\n",
+    "                counter += 1\n",
+    "    \n",
+    "\n",
+    "print( counter )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20000\n"
+     ]
+    }
+   ],
    "source": [
-    "print(np.sum(skim))\n",
-    "skim[:100]"
+    "infile = \"/srv/beegfs/scratch/groups/dpnc/dampe/prod/MC/reco/v6r0p10/allProton-v6r0p10_100GeV_1TeV_FTFP-p1/allProton-v6r0p10_100GeV_1TeV_FTFP-p1.noOrb.111768.reco.root\"\n",
+    "tree = ROOT.TChain(\"CollectionTree\")\n",
+    "tree.Add(infile)\n",
+    "nevents = tree.GetEntries()\n",
+    "print(nevents)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ROOT import DmpEvtBgoRec\n",
+    "bgorec = DmpEvtBgoRec()\n",
+    "tree.SetBranchAddress(\"DmpEvtBgoRec\", bgorec)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2739\n"
+     ]
+    }
+   ],
+   "source": [
+    "counter = 0\n",
+    "for i in range(nevents):\n",
+    "    ttt = tree.GetEntry(i)\n",
+    "    BGO_TotalE = bgorec.GetTotalEnergy()\n",
+    "    if( BGO_TotalE>0. ):\n",
+    "        counter +=1\n",
+    "#         elayer_max = 0.\n",
+    "#         for j in range(14):\n",
+    "#             if bgorec.GetELayer(j) > elayer_max:\n",
+    "#                 elayer_max = bgorec.GetELayer(j)\n",
+    "#         rMaxELayerTotalE = elayer_max / bgorec.GetTotalEnergy()\n",
+    "#         if rMaxELayerTotalE < 0.35:\n",
+    "#             counter +=1\n",
+    "\n",
+    "print( counter )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
