Lower energy threshold to allow quenched analyses + add true containment function

--- a/Test_skimmer_import.ipynb
+++ b/Test_skimmer_import.ipynb
@@ -21,7 +21,8 @@
     "from ROOT import DmpChain\n",
     "import ROOT\n",
     "\n",
-    "import Skimmer"
+    "import Skimmer\n",
+    "import Tools"
    ]
   },
   {
@@ -30,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.style.use(home+\"bee/Tools/matplotlib_style\")"
+    "plt.style.use(Tools.mpl_style_file)"
    ]
   },
   {
@@ -42,9 +43,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20000\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "TStreamerInfo::BuildCheck:0: RuntimeWarning: \n",
+      "   The StreamerInfo of class DmpRunSimuHeader read from file /srv/beegfs/scratch/groups/dpnc/dampe/prod/MC/reco/v6r0p10/allProton-v6r0p10_100GeV_1TeV_FTFP-p1/allProton-v6r0p10_100GeV_1TeV_FTFP-p1.noOrb.111768.reco.root\n",
+      "   has the same version (=1) as the active class but a different checksum.\n",
+      "   You should update the version to ClassDef(DmpRunSimuHeader,2).\n",
+      "   Do not try to write objects with the current class definition,\n",
+      "   the files will not be readable.\n",
+      "\n",
+      "TStreamerInfo::CompareContent:0: RuntimeWarning: The following data member of\n",
+      "the in-memory layout version 1 of class 'DmpRunSimuHeader' is missing from \n",
+      "the on-file layout version 1:\n",
+      "   string fHadrPhysList; //\n",
+      "TStreamerInfo::CompareContent:0: RuntimeWarning: The following data member of\n",
+      "the in-memory layout version 1 of class 'DmpRunSimuHeader' is missing from \n",
+      "the on-file layout version 1:\n",
+      "   double fCrmcEnergyThresholdGev; //\n",
+      "TStreamerInfo::CompareContent:0: RuntimeWarning: The following data member of\n",
+      "the in-memory layout version 1 of class 'DmpRunSimuHeader' is missing from \n",
+      "the on-file layout version 1:\n",
+      "   double fCrmcEnergyThreshold2Gev; //\n"
+     ]
+    }
+   ],
    "source": [
     "Use_data = False\n",
     "if( Use_data ):\n",
@@ -62,6 +96,75 @@
     "nevents = dc.GetEntries()\n",
     "print(nevents)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "132\n",
+      "CPU times: user 1.8 s, sys: 146 ms, total: 1.94 s\n",
+      "Wall time: 2.03 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "skim = Skimmer.SkimmerEv(dc)\n",
+    "print( np.sum(skim) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "134\n",
+      "CPU times: user 690 ms, sys: 33.8 ms, total: 724 ms\n",
+      "Wall time: 729 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "TrueContainment = Skimmer.TrueContainment(dc)\n",
+    "print( np.sum(TrueContainment) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "94"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(skim*TrueContainment)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -88,39 +191,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1000\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "TStreamerInfo::BuildCheck:0: RuntimeWarning: \n",
-      "   The StreamerInfo of class DmpRunSimuHeader read from file TESTFILES/allProton-v6r0p12_100TeV_1PeV_EPOSLHC_FTFP_BERT-p1.noOrb.100715.reco.root\n",
-      "   has the same version (=1) as the active class but a different checksum.\n",
-      "   You should update the version to ClassDef(DmpRunSimuHeader,2).\n",
-      "   Do not try to write objects with the current class definition,\n",
-      "   the files will not be readable.\n",
-      "\n",
-      "TStreamerInfo::CompareContent:0: RuntimeWarning: The following data member of\n",
-      "the in-memory layout version 1 of class 'DmpRunSimuHeader' is missing from \n",
-      "the on-file layout version 1:\n",
-      "   string fHadrPhysList; //\n",
-      "TStreamerInfo::CompareContent:0: RuntimeWarning: The following data member of\n",
-      "the in-memory layout version 1 of class 'DmpRunSimuHeader' is missing from \n",
-      "the on-file layout version 1:\n",
-      "   double fCrmcEnergyThresholdGev; //\n",
-      "TStreamerInfo::CompareContent:0: RuntimeWarning: The following data member of\n",
-      "the in-memory layout version 1 of class 'DmpRunSimuHeader' is missing from \n",
-      "the on-file layout version 1:\n",
-      "   double fCrmcEnergyThreshold2Gev; //\n"
+     "ename": "IOError",
+     "evalue": "[Errno 2] No such file or directory: 'filelist.txt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIOError\u001b[0m                                   Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-4f5c084d494b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mproton\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhelium\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"filelist.txt\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"r\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mline\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0;32mif\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0;34m\"Proton\"\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mline\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m             \u001b[0mproton\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0mline\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"\\n\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"/\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIOError\u001b[0m: [Errno 2] No such file or directory: 'filelist.txt'"
      ]
     }
    ],
